# flake8-errmsg

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py
src/flake8_errmsg/: __init__.py
tests/: example1.py  test_package.py
