[build-system]
requires = ["hatchling>=0.7"]
build-backend = "hatchling.build"


[project]
name = "flake8_errmsg"
version = "0.1.0"
authors = [
    { name = "Henry Schreiner", email = "henryschreineriii@gmail.com" },
]
maintainers = [
    { name = "The Scikit-HEP admins", email = "scikit-hep-admins@googlegroups.com" },
]

description = "Flake8 checker for raw literals inside raises."
readme = "README.md"

requires-python = ">=3.7"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
]

dependencies = [
    "typing_extensions >=3.7; python_version<'3.8'",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
    "pytest-cov >=3",
]
dev = [
    "pytest >=6",
    "pytest-cov >=3",
]
docs = [
    "Sphinx>=4.0",
    "myst_parser>=0.13",
    "sphinx-book-theme>=0.1.0",
    "sphinx_copybutton",
]

[project.urls]
homepage = "https://github.com/henryiii/flake8-errmsg"


[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]


[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.isort]
profile = "black"


[tool.pylint]
master.py-version = "3.7"
master.ignore-paths= ["src/flake8_errmsg/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]
